src-tauri/cargo_check4.txt
cargo :     Checking nakama v0.1.0 (C:\Users\wiliwow\Desktop\Nakama\src-tauri)
Au caractère Ligne:1 : 59
+ ... "C:\Users\wiliwow\Desktop\Nakama\src-tauri"; cargo check 2>&1 | Out-F ...
+                                                  ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking na...kama\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `tracing::warn`
 --> src\local_memory.rs:7:5
  |
7 | use tracing::warn;
  |     ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::time::SystemTime`
 --> src\memory.rs:2:5
  |
2 | use std::time::SystemTime;
  |     ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src\commands\rag.rs:90:5
    |
 90 |     crate::rag_indexer::compute_stats(&*store).await
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `rag::IndexStats`, found `rag_indexer::IndexStats`
    |
    = note: `rag_indexer::IndexStats` and `rag::IndexStats` have similar names, but are actually distinct types
note: `rag_indexer::IndexStats` is defined in module `crate::rag_indexer` of the current crate
   --> src\rag_indexer.rs:109:1
    |
109 | pub struct IndexStats {
    | ^^^^^^^^^^^^^^^^^^^^^
note: `rag::IndexStats` is defined in module `crate::commands::rag` of the current crate
   --> src\commands\rag.rs:12:1
    |
 12 | pub struct IndexStats {
    | ^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `model`
   --> src\ai_companion.rs:199:9
    |
199 |         model: String,
    |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_model`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `query_lower`
   --> src\local_memory.rs:159:13
    |
159 |         let query_lower = query.to_lowercase();
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_query_lower`

warning: unused variable: `score`
  --> src\memory.rs:48:29
   |
48 |                 if let Some(score) = p.score {
   |                             ^^^^^ help: if this is intentional, prefix it with an underscore: `_score`

warning: unused variable: `data`
  --> src\rag_indexer.rs:45:13
   |
45 |         let data: HashMap<String, IndexedDocumentMetadata> = serde_json::from_str(&content)
   |             ^^^^ help: if this is intentional, prefix it with an underscore: `_data`

For more information about this error, try `rustc --explain E0308`.
warning: `nakama` (lib) generated 6 warnings
error: could not compile `nakama` (lib) due to 1 previous error; 6 warnings emitted
